@@ -12,6 +12,7 @@ Jump Start Changelog
 * Added ability to hide Theme License admin page via `themeblvd_global_config` filter.
 * Added filterable "edit_theme_options" capability to License admin page.
 * Improved default `content-attachment.php`.
+* Slight UI improvements to Logo option in default Theme Options panel.
 
 1.0.2
 -----
